Revision history for {{$dist->name}}

{{$NEXT}}
        - stashes can now be added in [%Stash] form from a bundle

6.010     2017-07-10 09:22:16-04:00 America/New_York
        - a few documentation improvements (thanks, Chase Whitener, Mary
          Ehlers, and Jonas B. Nielsen)
        - improve behavior under a noninteractive terminal
        - empty file finders should now consistently return []

6.009     2017-03-04 11:16:37-05:00 America/New_York
        - update DateTime::TimeZone prereq on Win32 to improve workingness
          (thanks, Schwern!)
        - add --recommends and --requires and --suggests to listdeps
        - improve testing of listdeps (thanks, Mickey Nasriachi!)
        - Module::Runtime is now considered 'internal' for the purpose of
          carping (thanks, Karen Etheridge!)
        - ./tmp is now pruned by PruneCruft (thanks, Karen Etheridge!)
        - authordeps now picks up :version for the root section (thanks,
          Karen!)
        - the config loading of the "perl" config loader is more reliable, but
          still please don't use it (thanks, Karen!)
        - introducing a new plugin, [GatherFile], to support adding individual
          files to the distribution (thanks, Karen!)

6.008     2016-10-05 21:35:23-04:00 America/New_York
        - fix the skip message from ExtraTests (thanks, Roy Ivy Ⅲ!)
        - cope with error changes in latest Moose (thanks, Karen Etheridge and
          Dave Rolsky)
        - always stringify $] in MetaConfig to avoid losing trailing zeroes
          through numification (thanks, Karen Etheridge!)

6.007     2016-08-06 14:04:39-04:00 America/New_York
        - restrict [MetaYAML] to metaspec v1.4, [MetaJSON] to v2.0+, as other
          version combinations are not well-supported by the toolchain

6.006     2016-07-04 10:56:36-04:00 America/New_York
        - add some documentation to Dist::Zilla::App::Tester (thanks, Alberto
          Simões!)